WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36609
[Qt] QWebFrame::pageChanged() signal is not documented
https://bugs.webkit.org/show_bug.cgi?id=36609
Summary
[Qt] QWebFrame::pageChanged() signal is not documented
Kent Hansen
Reported
2010-03-25 09:55:46 PDT
This signal was introduced in
r54938
, but it didn't come with any documentation.
Attachments
Proposed patch
(1.21 KB, patch)
2010-03-25 10:06 PDT
,
Kent Hansen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Hansen
Comment 1
2010-03-25 10:06:55 PDT
Created
attachment 51652
[details]
Proposed patch It would be nice if we had an autotest as well. Maybe the test from
r54938
can be reasonably boiled down to a QWebFrame autotest.
WebKit Commit Bot
Comment 2
2010-03-25 16:30:08 PDT
Comment on
attachment 51652
[details]
Proposed patch Clearing flags on attachment: 51652 Committed
r56577
: <
http://trac.webkit.org/changeset/56577
>
WebKit Commit Bot
Comment 3
2010-03-25 16:30:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug