2010-03-25  Kent Hansen  <kent.hansen@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] QWebFrame::pageChanged() signal is not documented
        https://bugs.webkit.org/show_bug.cgi?id=36609

        * Api/qwebframe.cpp:

Canonical link: https://commits.webkit.org/47871@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56577 268f45cc-cd09-0410-ab3c-d52691b4dbfc